bindings/RosuFFI.h

typedef struct String String;
typedef struct ResultPtrFFIError ResultPtrFFIError;
typedef struct Difficulty Difficulty;
typedef struct BeatmapAttributesBuilder BeatmapAttributesBuilder;
typedef struct Mods Mods;
typedef struct Beatmap Beatmap;
struct String { uint8_t *ptr; uintptr_t len; uintptr_t capacity; };
struct ResultPtrFFIError { uint32_t variant; union { void *ok; uint32_t err; } payload; };
typedef enum Mode {
    MODE_OSU = 0,
    MODE_TAIKO = 1,
    MODE_CATCH = 2,
    MODE_MANIA = 3,
} Mode;
ResultPtrFFIError difficulty_create(void);
void beatmap_attributes_builder_mode(BeatmapAttributesBuilder * instance, Mode mode);
ResultPtrFFIError gradual_difficulty_create(const Difficulty * difficulty, const Beatmap * beatmap);
uint32_t mods_len(Mods * instance);
int64_t interoptopus_string_clone(const String * utf8, String * rval);
void difficulty_s_mods(Difficulty * instance, String str);
bool mods_insert_json(Mods * instance, String str, bool deny_unknown_fields);