JavaRosuPP/src/main/java/desu/life/raw/RosuNative.java


    /**
     * Address for:
     * {@snippet lang=c :
     * ResultPtrFFIError difficulty_create()
     * }
     */
    public static MemorySegment difficulty_create$address() {
        return difficulty_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ResultPtrFFIError difficulty_create()
     * }
     */
    public static MemorySegment difficulty_create(SegmentAllocator allocator) {
        var mh$ = difficulty_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("difficulty_create", allocator);
            }
            return (MemorySegment)mh$.invokeExact(allocator);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class beatmap_attributes_builder_mode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("beatmap_attributes_builder_mode").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_mode(BeatmapAttributesBuilder *instance, Mode mode)
     * }
     */
    public static FunctionDescriptor beatmap_attributes_builder_mode$descriptor() {
        return beatmap_attributes_builder_mode.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_mode(BeatmapAttributesBuilder *instance, Mode mode)
     * }
     */
    public static MethodHandle beatmap_attributes_builder_mode$handle() {
        return beatmap_attributes_builder_mode.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_mode(BeatmapAttributesBuilder *instance, Mode mode)
     * }
     */
    public static MemorySegment beatmap_attributes_builder_mode$address() {
        return beatmap_attributes_builder_mode.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void beatmap_attributes_builder_mode(BeatmapAttributesBuilder *instance, Mode mode)
     * }
     */
    public static void beatmap_attributes_builder_mode(MemorySegment instance, int mode) {
        var mh$ = beatmap_attributes_builder_mode.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("beatmap_attributes_builder_mode", instance, mode);
            }
            mh$.invokeExact(instance, mode);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class gradual_difficulty_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ResultPtrFFIError.layout(),
            RosuNative.C_POINTER,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("gradual_difficulty_create").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ResultPtrFFIError gradual_difficulty_create(const Difficulty *difficulty, const Beatmap *beatmap)
     * }
     */
    public static FunctionDescriptor gradual_difficulty_create$descriptor() {
        return gradual_difficulty_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ResultPtrFFIError gradual_difficulty_create(const Difficulty *difficulty, const Beatmap *beatmap)
     * }
     */
    public static MethodHandle gradual_difficulty_create$handle() {
        return gradual_difficulty_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ResultPtrFFIError gradual_difficulty_create(const Difficulty *difficulty, const Beatmap *beatmap)
     * }
     */
    public static MemorySegment gradual_difficulty_create$address() {
        return gradual_difficulty_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ResultPtrFFIError gradual_difficulty_create(const Difficulty *difficulty, const Beatmap *beatmap)
     * }
     */
    public static MemorySegment gradual_difficulty_create(SegmentAllocator allocator, MemorySegment difficulty, MemorySegment beatmap) {
        var mh$ = gradual_difficulty_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("gradual_difficulty_create", allocator, difficulty, beatmap);
            }
            return (MemorySegment)mh$.invokeExact(allocator, difficulty, beatmap);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mods_len {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            RosuNative.C_INT,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("mods_len").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t mods_len(Mods *instance)
     * }
     */
    public static FunctionDescriptor mods_len$descriptor() {
        return mods_len.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t mods_len(Mods *instance)
     * }
     */
    public static MethodHandle mods_len$handle() {
        return mods_len.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t mods_len(Mods *instance)
     * }
     */
    public static MemorySegment mods_len$address() {
        return mods_len.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t mods_len(Mods *instance)
     * }
     */
    public static int mods_len(MemorySegment instance) {
        var mh$ = mods_len.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mods_len", instance);
            }
            return (int)mh$.invokeExact(instance);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class interoptopus_string_clone {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            RosuNative.C_LONG,
            RosuNative.C_POINTER,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("interoptopus_string_clone").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int64_t interoptopus_string_clone(const String *utf8, String *rval)
     * }
     */
    public static FunctionDescriptor interoptopus_string_clone$descriptor() {
        return interoptopus_string_clone.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int64_t interoptopus_string_clone(const String *utf8, String *rval)
     * }
     */
    public static MethodHandle interoptopus_string_clone$handle() {
        return interoptopus_string_clone.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int64_t interoptopus_string_clone(const String *utf8, String *rval)
     * }
     */
    public static MemorySegment interoptopus_string_clone$address() {
        return interoptopus_string_clone.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int64_t interoptopus_string_clone(const String *utf8, String *rval)
     * }
     */
    public static long interoptopus_string_clone(MemorySegment utf8, MemorySegment rval) {
        var mh$ = interoptopus_string_clone.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("interoptopus_string_clone", utf8, rval);
            }
            return (long)mh$.invokeExact(utf8, rval);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class difficulty_s_mods {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            String_.layout()
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("difficulty_s_mods").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void difficulty_s_mods(Difficulty *instance, String str)
     * }
     */
    public static FunctionDescriptor difficulty_s_mods$descriptor() {
        return difficulty_s_mods.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void difficulty_s_mods(Difficulty *instance, String str)
     * }
     */
    public static MethodHandle difficulty_s_mods$handle() {
        return difficulty_s_mods.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void difficulty_s_mods(Difficulty *instance, String str)
     * }
     */
    public static MemorySegment difficulty_s_mods$address() {
        return difficulty_s_mods.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void difficulty_s_mods(Difficulty *instance, String str)
     * }
     */
    public static void difficulty_s_mods(MemorySegment instance, MemorySegment str) {
        var mh$ = difficulty_s_mods.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("difficulty_s_mods", instance, str);
            }
            mh$.invokeExact(instance, str);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mods_insert_json {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            RosuNative.C_BOOL,
            RosuNative.C_POINTER,
            String_.layout(),
            RosuNative.C_BOOL
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("mods_insert_json").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * bool mods_insert_json(Mods *instance, String str, bool deny_unknown_fields)
     * }
     */
    public static FunctionDescriptor mods_insert_json$descriptor() {
        return mods_insert_json.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * bool mods_insert_json(Mods *instance, String str, bool deny_unknown_fields)
     * }
     */
    public static MethodHandle mods_insert_json$handle() {
        return mods_insert_json.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * bool mods_insert_json(Mods *instance, String str, bool deny_unknown_fields)
     * }
     */
    public static MemorySegment mods_insert_json$address() {
        return mods_insert_json.ADDR;
    }
